FC-105 - [fortress-core] - config cleanup